<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Desencriptar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titDesencriptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/txt_titDesencypt"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="66dp" />

        <EditText
            android:id="@+id/InputLlavePrivada"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Introduzca su llave privada"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="306dp" />

        <EditText
            android:id="@+id/DesencriptarMsj"
            android:layout_width="380dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Escriba aqui su mensaje"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="101dp" />

        <Button
            android:id="@+id/btnDesencriptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/txt_Desencriptar"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="359dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/txt_result"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="407dp" />

        <EditText
            android:id="@+id/DesencryptResult"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="470dp" />

    </LinearLayout>
</LinearLayout>